add a--la-française.html La-note-enchante.html La-palette-du-gout.html Le-delice-des-sens.html

--- a/La-note-enchante.html
+++ b/La-note-enchante.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <i class="fa-solid fa-arrow-left"></i>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <main >
@@ -25,9 +25,9 @@
                 <i class="fa-solid fa-heart"></i>
             </div>
             <div class="menu_restau">
-                <h3>Entrées</h3>
                 <div class="categorie">
-                    <div class="groupe">
+                    <h3>Entrées</h3>
+                    <div class="groupe delay-1">
                         <div class="detail_repas">
                             <h4>Ravioles de foie gras</h4> 
                             <p>Accompagnées de leur crème à la truffe</p> 
@@ -37,7 +37,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-2">
                         <div class="detail_repas">
                             <h4>Caviar osciètre</h4> 
                             <p>Sur blini à la farine de blé noir</p> 
@@ -47,7 +47,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-3">
                         <div class="detail_repas">
                             <h4>Homard et espuma de</h4> 
                             <p>Marinés aux zestes d'orange</p> 
@@ -57,7 +57,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-4">
                         <div class="detail_repas">
                             <h4>Foie gras de canard cuit entier</h4> 
                             <p>Confiture de figue et pain toasté</p> 
@@ -68,9 +68,9 @@
                         </div> 
                     </div>
                 </div>
-                <h3>Plats</h3>
                 <div class="categorie">
-                    <div class="groupe">
+                    <h3>Plats</h3>
+                    <div class="groupe delay-1">
                         <div class="detail_repas">
                             <h4>Noix de coquilles Saint-Jacques</h4> 
                             <p>Sur lit de purée de céleri-rave</p> 
@@ -80,7 +80,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-2">
                         <div class="detail_repas">
                             <h4>Langoustine poêlée</h4> 
                             <p>Et purée de patate douce</p> 
@@ -90,7 +90,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-3">
                         <div class="detail_repas">
                             <h4>Mijoté de queue de boeuf</h4> 
                             <p>Et riz sauvage aux zestes de citron</p> 
@@ -100,10 +100,10 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <h3>Desserts</h3>
+                </div> 
                 <div class="categorie">
-                    <div class="groupe">
+                    <h3>Desserts</h3>
+                    <div class="groupe delay-1">
                         <div class="detail_repas">
                             <h4>Macaron noisette et chocolat</h4> 
                             <p>Glace au caramel brun et de Guérande</p> 
@@ -113,7 +113,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-2">
                         <div class="detail_repas">
                             <h4>Baba au rhum revisité</h4> 
                             <p>Revisité</p> 
@@ -123,7 +123,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="groupe">
+                    <div class="groupe delay-3">
                         <div class="detail_repas">
                             <h4>Tarta au citron meringuée </h4> 
                             <p>Déstructurée</p> 
