--- a/Le-delice-des-sens.html
+++ b/Le-delice-des-sens.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <main >
@@ -24,9 +25,9 @@
                 <i class="fa-solid fa-heart"></i>
             </div>
             <div class="composition_menu">
-                <h3>Entrées</h3>
                 <div class="categorie_menu">
-                    <div class="liste_menu">
+                    <h3>Entrées</h3>
+                    <div class="liste_menu delay-1">
                         <div class="repas_liste">
                             <h4>Tartare de thon</h4> 
                             <p>Assaisonné au yuzu</p> 
@@ -36,7 +37,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="liste_menu">
+                    <div class="liste_menu delay-2">
                         <div class="repas_liste">
                             <h4>Bouchée de homard croustillant</h4> 
                             <p>Et sa farandole de petits legumes</p> 
@@ -46,7 +47,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="liste_menu">
+                    <div class="liste_menu delay-3">
                         <div class="repas_liste">
                             <h4>Velouté de cèpes</h4> 
                             <p>Aux truffes</p> 
@@ -57,9 +58,9 @@
                         </div> 
                     </div>
                 </div>
-                <h3>Plats</h3>
                 <div class="categorie_menu">
-                    <div class="liste_menu">
+                    <h3>Plats</h3>
+                    <div class="liste_menu delay-1">
                         <div class="repas_liste">
                             <h4>Poulets rôti aux herbes de provence</h4> 
                             <p>Et sa crème de truffe</p> 
@@ -69,7 +70,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="liste_menu">
+                    <div class="liste_menu delay-2">
                         <div class="repas_liste">
                             <h4>Langouste rôtie</h4> 
                             <p>Et ses légumes de saison</p> 
@@ -79,7 +80,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="liste_menu">
+                    <div class="liste_menu delay-3">
                         <div class="repas_liste">
                             <h4>Côte de boeuf  Angus</h4> 
                             <p>Et sa purée d panais</p> 
@@ -90,9 +91,9 @@
                         </div> 
                     </div>
                 </div>
-                <h3>Desserts</h3>
                 <div class="categorie_menu">
-                    <div class="liste_menu">
+                    <h3>Desserts</h3>
+                    <div class="liste_menu delay-1">
                         <div class="repas_liste">
                             <h4>Farandole de desserts</h4> 
                             <p>Du chef</p> 
@@ -102,7 +103,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="liste_menu">
+                    <div class="liste_menu delay-2">
                         <div class="repas_liste">
                             <h4>Crème brûlée</h4> 
                             <p>Revisitée</p> 
@@ -112,7 +113,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="liste_menu">
+                    <div class="liste_menu delay-3">
                         <div class="repas_liste">
                             <h4>Tiramisu</h4> 
                             <p>A la noisette</p> 
