--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <main >
@@ -24,9 +25,9 @@
                 <i class="fa-solid fa-heart"></i>
             </div>
             <div class="different_menu">
-                <h3>Entrées</h3>
                 <div class="resto_palette">
-                    <div class="composition">
+                    <h3>Entrées</h3>
+                    <div class="composition delay-1">
                         <div class="liste_repas">
                             <h4>Fricassée d'escargots</h4> 
                             <p>Au piment d'espelette</p> 
@@ -36,7 +37,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="composition">
+                    <div class="composition delay-2">
                         <div class="liste_repas">
                             <h4>Foie gras de canard mi-cuit</h4> 
                             <p>Et ses copeaux de truffe noire</p> 
@@ -46,7 +47,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="composition">
+                    <div class="composition delay-3">
                         <div class="liste_repas">
                             <h4>Oeuf au plat</h4> 
                             <p>Assaisonné à la truffe sur lit de </p> 
@@ -57,9 +58,9 @@
                         </div> 
                     </div>
                 </div>
-                <h3>Plats</h3>
                 <div class="resto_palette">
-                    <div class="composition">
+                    <h3>Plats</h3>
+                    <div class="composition delay-1">
                         <div class="liste_repas">
                             <h4>Filet de boeuf aux herbes</h4> 
                             <p>Accompagnées de sa ribambelle de légumes</p> 
@@ -69,7 +70,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="composition">
+                    <div class="composition delay-2">
                         <div class="liste_repas">
                             <h4>Parmentier de queue de boeuf</h4> 
                             <p>A la truffe noire sur sa purée de panais</p> 
@@ -79,7 +80,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="composition">
+                    <div class="composition delay-3">
                         <div class="liste_repas">
                             <h4>Filet de turbot</h4> 
                             <p>Aux agrumes</p> 
@@ -90,9 +91,9 @@
                         </div> 
                     </div>
                 </div>
-                <h3>Desserts</h3>
                 <div class="resto_palette">
-                    <div class="composition">
+                    <h3>Desserts</h3>
+                    <div class="composition delay-1">
                         <div class="liste_repas">
                             <h4>Paris-Brest</h4> 
                             <p>Revisité</p> 
@@ -102,7 +103,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="composition">
+                    <div class="composition delay-2">
                         <div class="liste_repas">
                             <h4>Macaron au chocolat d'exception</h4> 
                             <p>Et glace à la vanille de Madagascar</p> 
@@ -112,7 +113,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="composition">
+                    <div class="composition delay-3">
                         <div class="liste_repas">
                             <h4>Mousse au chocolat</h4> 
                             <p>Au piment d'Espelette et à la truffe noire</p> 
