--- a/a-la-française.html
+++ b/a-la-française.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <main>
@@ -24,9 +25,9 @@
                 <i class="fa-solid fa-heart"></i>
             </div>
             <div class="composition_restau">
-                <h3>Entrées</h3>
                 <div class="categorie_repas">
-                    <div class="group_repas">
+                    <h3>Entrées</h3>
+                    <div class="group_repas delay-1">
                         <div class="detail">
                             <h4>Tartare de poulpe acidulé</h4> 
                             <p>Aux zestes d'oranges</p> 
@@ -36,7 +37,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="group_repas">
+                    <div class="group_repas delay-2">
                         <div class="detail">
                             <h4>Velouté de légumes d'antan</h4> 
                             <p>Carotte, panais, topinambour </p> 
@@ -46,7 +47,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>    
-                    <div class="group_repas">
+                    <div class="group_repas delay-3">
                         <div class="detail">
                             <h4>Soupe à l'oignon</h4> 
                             <p>Revisitée</p> 
@@ -56,10 +57,10 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
-                <h3>Plats</h3>
+                </div>    
                 <div class="categorie_repas">
-                    <div class="group_repas">
+                    <h3>Plats</h3>
+                    <div class="group_repas delay-1">
                         <div class="detail">
                             <h4>Coquilles Saint-Jacques</h4> 
                             <p>Accompagnées d'une purée de panais</p> 
@@ -69,7 +70,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="group_repas">
+                    <div class="group_repas delay-2">
                         <div class="detail">
                             <h4>Magret de canard</h4> 
                             <p>Et parmentier de pommes de terre</p> 
@@ -79,7 +80,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="group_repas">
+                    <div class="group_repas delay-3">
                         <div class="detail">
                             <h4>Pigeonneau d'Ille-et-Vilaine</h4> 
                             <p>Sur son lit de gnocchis aux légumes</p> 
@@ -90,9 +91,9 @@
                         </div> 
                     </div>
                 </div>    
-                <h3>Desserts</h3>
                 <div class="categorie_repas">
-                    <div class="group_repas">
+                    <h3>Desserts</h3>
+                    <div class="group_repas delay-1">
                         <div class="detail">
                             <h4>Pétales de violettes glacés</h4> 
                             <p>Et purée de noisettes</p> 
@@ -102,7 +103,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="group_repas">
+                    <div class="group_repas delay-2">
                         <div class="detail">
                             <h4>Fondant au chocolat</h4> 
                             <p>Revisité</p> 
@@ -112,7 +113,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                    <div class="group_repas">
+                    <div class="group_repas delay-3">
                         <div class="detail">
                             <h4>Millefeuille croustillant</h4> 
                             <p>Myrtille et pâte d'amande</p> 
@@ -122,7 +123,7 @@
                             <i class="fa-solid fa-check"></i>
                         </div> 
                     </div>
-                </div>
+                </div>    
             </div>  
             <div class="commande">
                 <button>Commandez</button>
