--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </section>
         <section class="menus">
             <h2>Restaurants</h2>
-            <div class="bloc_menus1">
-                <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu">
+            <div class="bloc_menus">
+                <a href="./La-palette-du-gout.html" class="card_menu">
                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_menu">
+                   <span class="nouveau">Nouveau</span>
                     <div class="description ">
                       <h3>La palette du goût</h3>
                       <p>Ménilmontant</p>
@@ -63,9 +63,9 @@
                       <i class="fa-solid fa-heart"></i>
                     </div>
                 </a>
-                <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu">
+                <a href="./La-note-enchante.html" class="card_menu">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
+                    <span class="nouveau">Nouveau</span>
                      <div class="description">
                        <h3>La note enchantée</h3>
                        <p>Charonne</p>
@@ -74,10 +74,10 @@
                     </div>
                 </a>
             </div>
-            <div class="bloc_menus2">
-                <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu">
+            <div class="bloc_menus">
+                <a href="./a-la-française.html" class="card_menu">
                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
+                   <span class="nouveau">Nouveau</span>
                    <div class="description">
                     <h3>A la française</h3>
                     <p>Cité Rouge</p>
@@ -85,9 +85,9 @@
                     <i class="fa-solid fa-heart"></i>
                   </div>
                 </a>
-                <p><span class="nouveau">Nouveau</span></p>
-                <a href="#" class="card_menu">
+                <a href="./Le-delice-des-sens.html" class="card_menu">
                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_menu">
+                    <span class="nouveau">Nouveau</span>
                     <div class="description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
