add pages complets

--- a/Pages.html/La-palette-du-gout.html
+++ b/Pages.html/La-palette-du-gout.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="./../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <main >
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="resto_palette">
-                    <h3>Plats</h3>
+                    <div class="menu_plat"><h3>Plats</h3></div>
                     <div class="composition delay-1">
                         <div class="liste_repas">
                             <h4>Filet de boeuf aux herbes</h4> 
@@ -135,7 +135,7 @@
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
         <p>Mentions légales</p>
-        <a href="mailto:">Contact</a>
+        <a href="mailto:helloomyfood@yahoo.fr">Contact</a>
     </footer>
 </body>
 </html>
