--- a/Pages.html/La-note-enchante.html
+++ b/Pages.html/La-note-enchante.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="./../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <main >
@@ -145,7 +145,7 @@
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
         <p>Mentions légales</p>
-        <a href="mailto:">Contact</a>
+        <a href="mailto:helloomyfood@yahoo.fr">Contact</a>
     </footer>
 </body>
 </html>
