--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,8 +25,8 @@
                 <h2>Paris, Belleville</h2>
             </div>
             <div class="explorer">
-                <h2>Réservez le menu qui<br/>vous convient</h2>
-                <p>Découvrez les restaurants d'exception,<br/>sélectionés par nos soins.</p>
+                <h2>Réservez le menu qui<br>vous convient</h2>
+                <p>Découvrez les restaurants d'exception,<br>sélectionés par nos soins.</p>
                 <button>Explorez nos restaurants</button>
             </div>
             <div class="Fonctionnement">
@@ -53,7 +53,7 @@
         <section class="menus">
             <h2>Restaurants</h2>
             <div class="bloc_menus">
-                <a href="./La-palette-du-gout.html" class="card_menu">
+                <a href="./Pages.html/La-palette-du-gout.html" class="card_menu">
                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_menu">
                    <span class="nouveau">Nouveau</span>
                     <div class="description ">
@@ -63,7 +63,7 @@
                       <i class="fa-solid fa-heart"></i>
                     </div>
                 </a>
-                <a href="./La-note-enchante.html" class="card_menu">
+                <a href="./Pages.html/La-note-enchante.html" class="card_menu">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
                     <span class="nouveau">Nouveau</span>
                      <div class="description">
@@ -75,7 +75,7 @@
                 </a>
             </div>
             <div class="bloc_menus">
-                <a href="./a-la-française.html" class="card_menu">
+                <a href="./Pages.html/a-la-française.html" class="card_menu">
                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_menu">
                    <span class="nouveau">Nouveau</span>
                    <div class="description">
@@ -85,7 +85,7 @@
                     <i class="fa-solid fa-heart"></i>
                   </div>
                 </a>
-                <a href="./Le-delice-des-sens.html" class="card_menu">
+                <a href="./Pages.html/Le-delice-des-sens.html" class="card_menu">
                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_menu">
                     <span class="nouveau">Nouveau</span>
                     <div class="description">
@@ -103,7 +103,7 @@
         <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
         <p>Mentions légales</p>
-        <a href="mailto: helloomyfood@yahoo.fr">Contact</a>
+        <a href="mailto:helloomyfood@yahoo.fr">Contact</a>
     </footer>    
 </body>
 </html>
