add correcte pages

--- a/Pages.html/La-palette-du-gout.html
+++ b/Pages.html/La-palette-du-gout.html
@@ -18,7 +18,7 @@
     </header>
     <main >
         <img src="./../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash" class="img_palette">
-        <div class="restaurants">
+        <section class="restaurants">
             <div class="Palette">
                 <h2>La palette du goût</h2>
                 <i class="fa-regular fa-heart"></i>
@@ -128,7 +128,7 @@
             <div class="choix_commande">
                 <button>Commandez</button>
             </div> 
-        </div>  
+        </section>  
     </main>
     <footer class="footer_palette">
         <h2>ohmyfood</h2>
