--- a/Pages.html/Le-delice-des-sens.html
+++ b/Pages.html/Le-delice-des-sens.html
@@ -18,7 +18,7 @@
     </header>
     <main >
         <img src="./../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash" class="img_delice">
-        <div class="restau_delice">
+        <section class="restau_delice">
             <div class="delice">
                 <h2>Le delice des sens</h2>
                 <i class="fa-regular fa-heart"></i>
@@ -128,7 +128,7 @@
             <div class="commande_delice">
                 <button>Commandez</button>
             </div> 
-        </div>  
+        </section>  
     </main>
     <footer class="footer_delice">
         <h2>ohmyfood</h2>
