--- a/Pages.html/a-la-française.html
+++ b/Pages.html/a-la-française.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <img src="./../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash" class="img_restau">
-        <div class="restau_menu">
+        <section class="restau_menu">
             <div class="française">
                 <h2>A la française</h2>
                 <i class="fa-regular fa-heart"></i>
@@ -128,7 +128,7 @@
             <div class="commande">
                 <button>Commandez</button>
             </div>  
-        </div>
+        </section>
     </main>
     <footer class="footer_français">
         <h2>ohmyfood</h2>
