--- a/Pages.html/La-note-enchante.html
+++ b/Pages.html/La-note-enchante.html
@@ -18,7 +18,7 @@
     </header>
     <main >
         <img src="./../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil-u2Lp8tXIcjw-unsplash" class="img">
-        <div class="Note_menu">
+        <section class="Note_menu">
             <div class="enchante">
                 <h2>La note enchantée</h2>
                 <i class="fa-regular fa-heart"></i>
@@ -138,7 +138,7 @@
             <div class="commandez">
                 <button>Commandez</button>
             </div>  
-        </div> 
+        </section> 
     </main>
     <footer class="footer_enchante">
         <h2>ohmyfood</h2>
